--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.15",
-    "@types/lodash": "^4.14.176",
+    "@types/lodash": "^4.14.177",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-infinite-scroller": "^1.2.2",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.1",
     "@types/yup": "^0.29.13",
@@ -27,6 +28,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-images-uploading": "^3.1.3",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
