--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@types/react-infinite-scroller": "^1.2.2",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.1",
+    "@types/socket.io-client": "^3.0.0",
     "@types/yup": "^0.29.13",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "moment-with-locales-es6": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-images-uploading": "^3.1.3",
@@ -32,6 +35,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.4.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
